--- a/index.html
+++ b/index.html
@@ -93,6 +93,8 @@
       </div>
     </div>
     </div>
+    <br>
+    <span class= "footer"><a href = "https://github.com/schtepfi/weather-app">Open-source code</a>, by Stephanie Schlaepfer</span>
     </div> 
     <script src="src/script.js"></script> 
   </body>
