--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     </div>
     </div>
     <br>
-    <span class= "footer"><a href = "https://github.com/schtepfi/weather-app">Open-source code</a>, by Stephanie Schlaepfer</span>
+    <span class="footer"><a href="https://github.com/schtepfi/weather-app" target="_blank">Open-source code</a>, by Stephanie Schlaepfer</span>
     </div> 
     <script src="src/script.js"></script> 
   </body>
