added unit conversion (celsius / fahrenheit)

--- a/index.html
+++ b/index.html
@@ -47,7 +47,12 @@
           </div>
           <div class="col-6">
             <i class="fas fa-sun"></i>
-            <h2 id="currentTemperature"></h2><span class = "units"><a id="currentCelsius" href="#">°C </a> | <a id="currentFahrenheit" href="#">°F</a></span><h2> <span id="description">Sunny</span></h2>
+            <h2 id="currentTemperature"></h2>
+            <span class="units">
+              <a href="#" id="currentCelsius" class="active">°C </a> | 
+              <a href="#" id="currentFahrenheit">°F</a>
+            </span>
+            <h2> <span id="description">Sunny</span></h2>
           </div>
         </div>
         <div class="row">
