fixed Temperature Bug

--- a/index.html
+++ b/index.html
@@ -76,14 +76,17 @@
             </div>
           </div>
           <br />
-          <p>"The hottest day of the week is Sun-day"</p>
+
+          <p id="comment">"The hottest day of the week is Sun-day"</p>
           <div class="future"><h2>The Future</h2></div>
           <br />
+
           <div class="row weather-forecast" id="forecast"></div>
         </div>
       </div>
     </div>
     <br />
+
     <span class="footer">
       <a href="https://github.com/schtepfi/weather-app" target="_blank"
         >Open-source code</a
