JS current Location v3

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           </div>
           <br />
 
-          <p id="comment">"The hottest day of the week is Sun-day"</p>
+          <p id="comment"></p>
           <div class="future"><h2>The Future</h2></div>
           <br />
 
